custom.css
/* ... */
.register {
    display: none;
}

/* General Reset */
*,
*:before,
*:after {
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
    scroll-padding: calc(60.44px + 2rem);
}

body {
    overflow-y: overlay;
    margin: 0;
    background-color: #ffe6f0;
    font-size: 100%;
    font-family: var(--ff-general);
    overflow-x: hidden;
}

a:hover,
a:visited,
a:link {
    text-decoration: none;
}

ul,
li {
    list-style: none;
}

/* Custom Scrollbar Section */
body::-webkit-scrollbar {
    width: 10px;
}

body::-webkit-scrollbar-track {
    margin-block: 0.5em;
    border-radius: 100vw;
    background: #BFDBFE;/*rgba(115, 115, 115, 0.25);*/
}

body::-webkit-scrollbar-thumb {
    border-radius: 100vw;
    background: #f6a070; /*var(--accent-400);*/
}

body::-webkit-scrollbar-track-piece:start,body::-webkit-scrollbar-track-piece:end {
    background: transparent;
}

@supports (scrollbar-color: white white) {
    body {
        scrollbar-width: thin;
        scrollbar-color: #f6a070 #BFDBFE;/*var(--accent-400) rgba(115, 115, 115, 0.25);*/
    }
}

::selection {
    background: var(--accent-400);
    color: var(--neutral-700);
}

/* Layout Specifications */
.main-layout {
    display: grid;
    grid-template-rows: auto 1fr auto;
    min-height: 100vh;
    min-height: 100dvh;
}

/* Navigation Bar Section */
header {
    background: #ffffff;
    text-align: center;

    position: sticky;
    /*Maybe absolute is better, priviously : fixed*/
    z-index: 999;

    width: 100%;
    left: 0;
    box-shadow: 0px 0px 1px rgb(10, 22, 70, 0.06), 0px 1px 1px rgb(10, 22, 70, 0.1);
}

.logo {
    height: 60.44px;
    margin-block: 1rem;
}

.navbar {
    position: absolute;
    text-align: left;
    top: 100%;
    left: 0;
    background: #ffffff;
    width: 100%;
    transform: scale(1, 0);

    transform-origin: top;
    transition: transform 400ms ease-in-out;
}

.navbar ul {
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.navbar button {
    margin: 0 0 1rem 1rem;
    border: none;
    cursor: pointer;
    background-color: var(--main-500);
}

header a {
    color: #191a1b;
    text-decoration: none;
    font-size: var(--fs-400);
    text-transform: uppercase;
    opacity: 0;

    transition: 150ms ease-in-out;
}

@media screen and (orientation: portrait) {
    .navbar a:hover {
        color: var(--accent-400);
    }
}

.nav-toggle {
    display: none;
}

.nav-toggle:checked~nav {
    transform: scale(1, 1);
}

.nav-toggle:checked~nav a {
    opacity: 1;
    transition: 250ms ease-in-out 250ms;
}

.nav-toggle-label {
    position: absolute;

    height: 100%;
    display: flex;
    align-items: center;

    top: 0;
    left: 0;
    margin-left: 1rem;
}

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
    display: block;
    background: #ffffff;
    height: 2px;
    width: 2em;
    border-radius: 2px;
    position: relative;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after {
    content: '';
    position: absolute;
}

.nav-toggle-label span::before {
    bottom: 7px;
}

.nav-toggle-label span::after {
    top: 7px;
}


.nav-toggle {
    display: none;
}

.nav-toggle:checked~nav {
    transform: scale(1, 1);
}

.nav-toggle:checked~nav a {
    opacity: 1;
    transition: 250ms ease-in-out 250ms;
}

.nav-toggle-label {
    position: absolute;

    height: 100%;
    display: flex;
    align-items: center;

    top: 0;
    left: 0;
    margin-left: 1rem;
}

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
    display: block;
    background: #ffffff;
    height: 2px;
    width: 2em;
    border-radius: 2px;
    position: relative;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after {
    content: '';
    position: absolute;
}

.nav-toggle-label span::before {
    bottom: 7px;
}

.nav-toggle-label span::after {
    top: 7px;
}
/* ... */

